--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -37,7 +37,7 @@
         </h:column>
         <h:column>
             <f:facet name="header">Publication Date</f:facet>
-            <h:outputText value="#{docRow[1]}">
+            <h:outputText value="#{doc.publicationDate}">
                 <f:convertDateTime pattern="yyyy-MM-dd" />
             </h:outputText>
         </h:column>
